# Transformer-language-model

./: .gitignore  CNAME  GPU_test.py  README.md  evalute.py  gpt-from-scratch.ipynb  test.py  train.py  transformer.py
GPU train/: data.txt  data2.txt
config/: config.py
data_set/: data_set.py
evaluate/: evaluate.py  generate.py  weights.py
generate/: CMakeLists.txt  export.py  generate.py  main.cpp  model.py
logs/: read.md
train_test/: infer.cu  model.py  weights.py
